--- a/unit1_projects/week8_cultural.html
+++ b/unit1_projects/week8_cultural.html
@@ -21,13 +21,28 @@
 		<div id="content">
 			<!--Content center-left-->
 			<div id="content_title">
+				Pairing
 				<span id="date">June 15, 2014</span>
 			</div>
 			<div id="content_objectives">
 
 			</div>
 			<div id="content_text">
-
+				<p>
+					Pairing was and, honestly, still is the most intimidating feature of the DBC experience for me. With communication emphasized, I find myself occasionally having trouble articulating verbally the coding strategies I attempt to employ. This may sound counterintuitive, but I think the problem occurs from trying to think about a challenge in different ways. I put pressure on myself to commit to the first strategy I think up, whereas I usually tend to sit and mull over a problem when I work it on my own. This pressure is compounded with the main critique I've heard, which is that I don't always fully articulate my thoughts. It is a bad habit of mine not to finish a sentence. I think out loud a lot. For me, it is a problem that is easily caught, and practice hopefully will improve my communication. 
+				</p>
+				<p>
+					So far my pairing sessions have gone well. From the beginning, I have tried to go into them with a positive attitude, with a conscious effort to listen, and with an adequate amount of preparation. I don't know if this is the best strategy, but I think it's a solid one. It pays off in a good pairing session mood, which is essential to have a productive learning session. I've had no new, great insight into pair programming though. I do feel like I haven't used them to their greatest potential. This might be because a good dynamic is difficult to form. 
+				</p>
+				<p>
+					In terms of feedback, I've found that making specific, actionable comments are the most difficult to get down. <em>General</em> problems seem like they're much more prevalent. I'm trying to combat this by being more observant. I've found that sometimes the best critique can be made towards an aspect of a session that wasn't necessarily apparent. What's missing might be the biggest drawback of a bad session. 
+				</p>
+				<p>
+					The biggest problem I have with pairing, though, is initializing it. Reaching out to people is not something I normally do. I have to work on this, and I have to become more comfortable in doing it. It's hard for me to be proactive with people over the Internet. They have lives, schedules, and work I am oblivious to. It is almost like reaching out into the void for me. I'm hoping the different situation of active pairing at DBC will eliminate this personal tension I have. In addition, I believe once I get to know my cohort better after face-to-face meetings, I'll be more comfortable reaching out to them. 
+				</p>
+				<p>
+					Pairing, like many other aspects of learning, is about moving forward and improving. Practice is essential. The more experienced know where the pitfalls are and where the potential lies. 
+				</p>
 			</div>
 			<div>
 
