Week nine updates

--- a/unit1_projects/week8_cultural.html
+++ b/unit1_projects/week8_cultural.html
@@ -16,7 +16,7 @@
 	<div id="wrapper">
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="week7_cultural.html">Prev</a><!--<a id="next" href="">Next</a>-->
+			<a id="prev" href="week7_cultural.html">Prev</a><a id="next" href="week9_cutural.html">Next</a>
 		</div>
 		<div id="content">
 			<!--Content center-left-->
@@ -50,7 +50,7 @@
 		</div>
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="week7_cultural.html">Prev</a><!--<a id="next" href="">Next</a>-->
+			<a id="prev" href="week7_cultural.html">Prev</a><a id="next" href="week9_cultural.html">Next</a>
 		</div>
 		<div id="footer">
 			<!--Footer bottom-->
