Week nine updates

--- a/unit1_projects/week9_cultural.html
+++ b/unit1_projects/week9_cultural.html
@@ -29,16 +29,16 @@
 			</div>
 			<div id="content_text">
 			<p>
-				In the beginning of phase 0, I evaluated myself to be of abstract sequential thinking style. Looking back at how I worked through the phase, I think this makes a lot of sense. I found that sitting and thinking about a problem before I attempted it was highly effective. I know the Dev Bootcamp emphasizes pseudocoding, where you plot out your ideas on paper, but I believe I benefit from some thinking time before even that. Usually, I run through a variety of ideas in my head, and I don’t have too much trouble keeping the logic straight. This seems to fit well in with the gist of abstract sequential thinking. 
+				In the beginning of phase 0, I evaluated myself to be of abstract sequential thinking style. Looking back at how I worked through the phase, I think this makes a lot of sense. I found that sitting and thinking about a problem before I attempted it was highly effective. I know the Dev Bootcamp emphasizes pseudocoding, where you plot out your ideas on paper, but I believe I benefit from some thinking time before even that. Usually, I run through a variety of ideas in my head, and I don't have too much trouble keeping the logic straight. This seems to fit well in with the gist of abstract sequential thinking. 
 			</p>
 			<p>
-				I believe this does cause some conflict with what is expected in some aspects of the phase, though. I usually like to take my time with work. I like to come back to things. I think, especially with pairing, especially in the context of this program where you have to get a lot of work in during a short amount of time, this thinking style is subject to a lot of pressure. I’ve found this to be true, somewhat in pairing sessions, but generally, since I’ve worked mostly on my own, it hasn’t been a great problem. 
+				I believe this does cause some conflict with what is expected in some aspects of the phase, though. I usually like to take my time with work. I like to come back to things. I think, especially with pairing, especially in the context of this program where you have to get a lot of work in during a short amount of time, this thinking style is subject to a lot of pressure. I've found this to be true, somewhat in pairing sessions, but generally, since I've worked mostly on my own, it hasn't been a great problem. 
 			</p>
 			<p>
-				I know, though, things will be different during phase 1, so I will need a plan. Right now, it’s hard to get a feel for what will be effective because I’m not terribly sure how things will exactly play out. I’ll have to stick to general principles of success. Keep focused. Verbalize my thoughts. Be aware of my time.  Put in the effort. Don’t get flustered. Getting flustered is probably my biggest concern because it can lead to the most troublesome situations.   
+				I know, though, things will be different during phase 1, so I will need a plan. Right now, it's hard to get a feel for what will be effective because I'm not terribly sure how things will exactly play out. I'll have to stick to general principles of success. Keep focused. Verbalize my thoughts. Be aware of my time.  Put in the effort. Don't get flustered. Getting flustered is probably my biggest concern because it can lead to the most troublesome situations.   
 			</p>
 			<p>
-				Of course, there is room for improvement, especially when it comes to effective learning approaches. Given that I’ll be working with a large group, I’ll have the opportunity to learn by example and see how others take on difficult situations. The key is to stay observant
+				Of course, there is room for improvement, especially when it comes to effective learning approaches. Given that I'll be working with a large group, I'll have the opportunity to learn by example and see how others take on difficult situations. The key is to stay observant. 
 			</p>
 
 
